[package]
name = "_16su1q8oeei"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"
futures = "0.3.28"
log = "0.4"
env_logger = "0.10"
pin-project = "1.0.12"
rand = "0.8.5"
